--- a/css/loja.css
+++ b/css/loja.css
@@ -69,6 +69,7 @@ a{
 
 .img-main{
     margin: 15px;
+    max-height: 80%;
 }
 
 .categorias{
@@ -110,7 +111,9 @@ a{
 #main{
     display: flex;
     height: 70vh;
-    justify-content: space-between;
+    width: 70vw;
+    margin: 0 auto;
+    justify-content: center;
 }
 
 #main aside{
@@ -175,6 +178,7 @@ a{
 }
 
 .destaques-li{
+    height: 450px;
     float: left;
 }
 
@@ -198,13 +202,10 @@ a{
     background-color: black;
     color: white;
     border: none;
-    margin-top: 1vh;
+    width: fit-content;
     padding: 10px;
-    right: 10%;
     cursor: pointer;
     border-radius: 10px 5px 10px 5px;
-    position: relative;
-    display: inline-block;
 }
 
   .btn-main:hover{
